# jabberwocky

./: .gitattributes  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test_output.txt
data/: bank_fr.json
examples/: input.txt
outputs/: pseudowords_fr.txt
scripts/: build_bank_eng.py  build_bank_fr.py  demo_wuggy_fr.py  jabberwocky_text.py
source/jw/: cli.py
source/jw/bank/: __init__.py  loader.py  mock_data.py  sampler.py
source/jw/jabber/: __init__.py  policy.py  transform.py
source/jw/nlp/: spacy_fr.py
source/jw/text/: surface.py
tests/: test_jabberwocky.py
